# time_series_analysis

time_series/: readme.md
time_series/course_materials/: .dockerignore  .gitignore  README.md  pyproject.toml
time_series/course_materials/.devcontainer/: Dockerfile  devcontainer.json  pandas-startup.py  startup.sh
time_series/course_materials/data/EIA/: README.md  fuel_type_data_pjm.parquet
time_series/course_materials/data/EIA/scripts/: download.ipynb  facet_options.yml
time_series/course_materials/data/FRED/scripts/: download.ipynb
time_series/course_materials/data/YFINANCE/: magnificent7_2000-today.parquet
time_series/course_materials/data/YFINANCE/scripts/: download.ipynb
time_series/course_materials/modules/: utils.py
